--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -29,6 +30,7 @@
     "clsx": "^2.1.1",
     "ethers": "5.7.2",
     "framer-motion": "^12.5.0",
+    "lightweight-charts": "^5.0.3",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
