--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^12.5.0",
     "lightweight-charts": "^5.0.3",
     "lucide-react": "^0.483.0",
+    "mongoose": "^8.12.2",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
