--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.2.4",
+    "wagmi": "^2.14.15",
     "zod": "^3.24.2"
   },
   "devDependencies": {
